--- a/package.json
+++ b/package.json
@@ -26,10 +26,14 @@
     "@capacitor/core": "5.6.0",
     "@capacitor/haptics": "5.0.7",
     "@capacitor/keyboard": "5.0.8",
+    "@capacitor/splash-screen": "^5.0.7",
     "@capacitor/status-bar": "5.0.7",
     "@ionic/angular": "^7.0.0",
+    "@ionic/storage-angular": "^4.0.0",
     "animate.css": "^4.1.1",
+    "install": "^0.13.0",
     "ionicons": "^7.0.0",
+    "localforage-cordovasqlitedriver": "^1.8.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
